# Sistema-de-Gestion-Funeraria

./: .gitignore  .vercelignore  ARQUITECTURA-AURA-REFERENCIA.txt  CAMBIOS-FIX-404.md  CHECKLIST-DISTRIBUCION.md  COMANDOS-RAPIDOS.txt  COMO-COMPARTIR-A-CLIENTES.txt  COMO-DISTRIBUIR.md  COMO-HACER-BACKUPS.txt  DISTRIBUIR-MAC-WINDOWS-SIMPLE.txt  DISTRIBUIR-RESUMEN.txt  EJECUTAR-AHORA.md  ENVIAR-A-CLIENTES-SIMPLE.txt  ERRORES-SOLUCIONADOS.md  FIX-ROUTES-ERROR.md  FIX-VITE-CACHE.md  GUIA-ACTUALIZACIONES.md  GUIA-DISTRIBUCION-CLIENTES.md  GUIA-DISTRIBUCION-MAC-WINDOWS.md  GUIA-ELECTRON.md  GUIA-GITHUB-VERCEL.md  GUIA-INSTALACION.md  GUIA-PASO-A-PASO-COMPLETA.txt  GUIA-REUTILIZAR-CONOCIMIENTO.txt  GUIA-SQLITE.md  INICIO-RAPIDO-NUEVO.md  INICIO-RAPIDO.md  INSTALACION-RAPIDA.md  INSTALAR-3-PASOS.md  INSTALAR-AHORA.sh  LICENSE.md  LIMPIAR-CACHE.sh  LISTO-DISTRIBUCION.txt  LISTO-MAC-WINDOWS.txt  MANUAL-CLIENTE-MAC.txt  MANUAL-CLIENTE-WINDOWS.txt  MANUAL-CLIENTE.txt  METODOLOGIA-DESARROLLO-APPS.txt  PACKAGING.md  PASOS-DESPUES-DE-DESCARGAR.txt  (+33 more)
.github/workflows/: release.yml
dev-dist/: sw.js
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: aura.json
src-tauri/src/: main.rs
src/app/: App.tsx  Root.tsx  routes.tsx
src/imports/: build-log-1.txt  build-log.txt  electron-db-error-1.txt  electron-db-error.txt  electron-db-log.txt  npm-dev-log.txt  npm-install-error-log.txt  npm-install-log.txt  package-1.json  package.json  setup-log.txt  sistema-funeraria-db-init.txt  (+2 more)
(+40 files in other folders)
